5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3119/executions/1871_1724.log
== TEST (2019-07-02 16:07:44) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matriz: ")))
print((6*8.2)+(4*1.1)+(8*7.9))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:09:07) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matriz: ")))


for i in range(mat):
	for j in range(mat):
		mat[i,j] = sum[:,j]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:24:54) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matriz: ")))


print(mat[,0])
-- ERROR:
File "XXXX", line 7
    print(mat[,0])
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:24:57) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matriz: ")))


print(mat[:,0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:25:54) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matriz: ")))


print(mat[0,0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:26:08) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matriz: ")))


print(mat[0,1]
-- ERROR:
File "XXXX", line 8
    
                  ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:26:11) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matriz: ")))


print(mat[0,1])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:26:31) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matriz: ")))


print(mat[0,1]*mat[0,0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:27:32) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matriz: ")))

for i in shape[0]:
	a = sum(mat[:,0]):
print(a)		
		
-- ERROR:
File "XXXX", line 7
    a = sum(mat[:,0]):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:27:36) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matriz: ")))

for i in shape[0]:
	a = sum(mat[:,0])
print(a)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:27:50) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matriz: ")))

for i in shape(mat[0]):
	a = sum(mat[:,0])
print(a)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:28:37) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matriz: ")))

for i in shape(mat[0]):
	a = sum(mat[:,0])
	b = sum(mat[:,1])
print(a)
print(b)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:28:51) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matriz: ")))

for i in shape(mat[0]):
	a = sum(mat[:,0])
	b = sum(mat[:,1])
print(a*b)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:29:04) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matriz: ")))

for i in shape(mat[0]):
	a = sum(mat[:,0])
	b = sum(mat[:,1])
print(a*b/3)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:29:12) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matriz: ")))

for i in shape(mat[0]):
	a = sum(mat[:,0])
	b = sum(mat[:,1])
print(a*b/3)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:35:28) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matriz: ")))

vet = zeros(mat.shape[0])

	

print(vet)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:36:42) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matriz: ")))

vet = zeros(mat.shape[0])

for i in shape[1]:
	vat[i] = mat[,0] * mat[,1]

print(vet)

		
-- ERROR:
File "XXXX", line 9
    vat[i] = mat[,0] * mat[,1]
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:36:53) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matriz: ")))

vet = zeros(mat.shape[0])

for i in shape[1]:
	vet[i] = mat[:,0] * mat[:,1]

print(vet)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:37:06) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matriz: ")))

vet = zeros(mat.shape[0])

for i in shape(mat):
	vet[i] = mat[:,0] * mat[:,1]

print(vet)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:37:30) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matriz: ")))

vet = zeros(mat.shape[0])

for i in shape(mat):
	vet[i] = sum[i,:]

print(vet)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:37:47) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matriz: ")))

vet = zeros(mat.shape[0])

for i in shape(mat):
	vet[i] = sum(mat[i,:])

print(vet)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:41:58) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matriz: ")))

vet = zeros(mat.shape[0])

for i in shape(mat):
	mat[i] = sum(mat[i,:])

print(mat)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:42:31) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matriz: ")))

vet = zeros(mat.shape[0])

for i in shape(mat):
	vet = sum(mat[i,:])

print(mat)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:42:35) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matriz: ")))

vet = zeros(mat.shape[0])

for i in shape(mat):
	vet = sum(mat[i,:])

print(vet)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
